--- a/src/main/resources/templates/user/user-dashboard.html
+++ b/src/main/resources/templates/user/user-dashboard.html
@@ -156,78 +156,106 @@
       >
         <nav class="mt-2">
           <ul>
+            <!-- Home -->
             <li
               class="flex items-center px-6 py-3 cursor-pointer sidebar-item-active"
             >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5 mr-3"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-              >
-                <path
-                  d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"
-                />
-              </svg>
-              Home
+              <a href="/user/view/dashboard" class="flex items-center w-full">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5 mr-3"
+                  viewBox="0 0 20 20"
+                  fill="currentColor"
+                >
+                  <path
+                    d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"
+                  />
+                </svg>
+                Home
+              </a>
             </li>
+
+            <!-- Create Project -->
             <li class="flex items-center px-6 py-3 cursor-pointer sidebar-item">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5 mr-3"
-                viewBox="0 0 20 20"
-                fill="currentColor"
+              <a
+                href="/user/view/create-project"
+                class="flex items-center w-full"
               >
-                <path
-                  fill-rule="evenodd"
-                  d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-              Create Project
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5 mr-3"
+                  viewBox="0 0 20 20"
+                  fill="currentColor"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+                Create Project
+              </a>
             </li>
+
+            <!-- View Invitations -->
             <li class="flex items-center px-6 py-3 cursor-pointer sidebar-item">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5 mr-3"
-                viewBox="0 0 20 20"
-                fill="currentColor"
+              <a
+                href="/user/view/view-invitation"
+                class="flex items-center w-full"
               >
-                <path
-                  fill-rule="evenodd"
-                  d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.707-8.707a1 1 0 00-1.414 1.414L9 12.414V5a1 1 0 10-2 0v5.414L3.707 9.707a1 1 0 00-1.414 1.414l4 4a1 1 0 001.414 0l4-4a1 1 0 00-1.414-1.414L8 12.586V7a1 1 0 10-2 0v5.586l.293-.293z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-              View Invitations
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5 mr-3"
+                  viewBox="0 0 20 20"
+                  fill="currentColor"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.707-8.707a1 1 0 00-1.414 1.414L9 12.414V5a1 1 0 10-2 0v5.414L3.707 9.707a1 1 0 00-1.414 1.414l4 4a1 1 0 001.414 0l4-4a1 1 0 00-1.414-1.414L8 12.586V7a1 1 0 10-2 0v5.586l.293-.293z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+                View Invitations
+              </a>
             </li>
+
+            <!-- View All Project -->
             <li class="flex items-center px-6 py-3 cursor-pointer sidebar-item">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5 mr-3"
-                viewBox="0 0 20 20"
-                fill="currentColor"
+              <a
+                href="/user/view/view-all-projects"
+                class="flex items-center w-full"
               >
-                <path
-                  d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM3 8a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM5 12a1 1 0 100 2h10a1 1 0 100-2H5zM8 16a1 1 0 100 2h4a1 1 0 100-2H8z"
-                />
-              </svg>
-              View All Project
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5 mr-3"
+                  viewBox="0 0 20 20"
+                  fill="currentColor"
+                >
+                  <path
+                    d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM3 8a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM5 12a1 1 0 100 2h10a1 1 0 100-2H5zM8 16a1 1 0 100 2h4a1 1 0 100-2H8z"
+                  />
+                </svg>
+                View All Project
+              </a>
             </li>
+
+            <!-- Chat -->
             <li class="flex items-center px-6 py-3 cursor-pointer sidebar-item">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5 mr-3"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M18 10c0 3.866-3.582 7-8 7a8.841 8.841 0 01-4.083-.98L2 17l1.338-3.123C2.493 12.767 2 11.434 2 10c0-3.866 3.582-7 8-7s8 3.134 8 7zM7 9H5V7h2v2zm8 0h-2V7h2v2z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-              Chat
+              <a href="#" class="flex items-center w-full">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5 mr-3"
+                  viewBox="0 0 20 20"
+                  fill="currentColor"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M18 10c0 3.866-3.582 7-8 7a8.841 8.841 0 01-4.083-.98L2 17l1.338-3.123C2.493 12.767 2 11.434 2 10c0-3.866 3.582-7 8-7s8 3.134 8 7zM7 9H5V7h2v2zm8 0h-2V7h2v2z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+                Chat
+              </a>
             </li>
           </ul>
         </nav>
